# mini-swe-agent-openai-cot

./: LICENSE  README.md  pyproject.toml
examples/: deep-swe-kindle-alpha-agent.yaml
src/mswea_openai_cot/: __init__.py  openai_cot.py
